<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aw_radar_bridge</name>
  <version>0.0.0</version>
  <description>Bridge from internal radar msgs to Autoware radar msgs</description>
  <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>
  <maintainer email="hcruzgo@ed.ac.uk">HectorCr uz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>ecal_to_ros</depend>
  <depend>radar_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
